syntax = "proto3";

package vertify;

service Vertify {
    rpc CheckKey(VertifyRequest) returns (VertifyResponse);
}

message VertifyRequest {
    string key = 1;
}

message VertifyResponse {
    bool checked = 1;
}

